# Solace-Treasury

./: Readme.md
solana_agent_treasury/: .gitignore  Anchor.toml  package.json  tsconfig.json
solana_agent_treasury/programs/solana_agent_treasury/: Cargo.toml
solana_agent_treasury/programs/solana_agent_treasury/src/: lib.rs
solana_agent_treasury/test-ledger/: faucet-keypair.json
solana_agent_treasury/tests/: solana_agent_treasury.ts
treasury-manager/: docker-compose.yaml  package.json  pnpm-lock.yaml
treasury-manager/app/: globals.css  layout.tsx  page.tsx  providers.tsx
treasury-manager/app/(app)/: layout.tsx
treasury-manager/app/(app)/agent/: page.tsx
treasury-manager/app/(app)/dashboard/: page.tsx
treasury-manager/app/(app)/team/: page.tsx
treasury-manager/app/(app)/team/components/: DepositSol.tsx  (+5 more)
treasury-manager/app/(app)/transactions/: page.tsx
treasury-manager/app/api/members/: route.ts
treasury-manager/app/api/teams/: route.ts  routes.ts
treasury-manager/app/api/transactions/: route.ts
treasury-manager/app/components/: Navbar.tsx  Sidebar.tsx  connect_button.tsx
treasury-manager/app/components/landing/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LandingNavbar.tsx
treasury-manager/app/lib/: idl.json  prisma.ts  solana-address.ts
treasury-manager/app/lib/agent/: tools.ts
treasury-manager/app/lib/db/: members.ts  team.ts  transcation.ts
treasury-manager/prisma/: schema.prisma
treasury-manager/prisma/migrations/20260425131356_add/: migration.sql
treasury-manager/prisma/migrations/20260425165351_add/: migration.sql
(+17 files in other folders)
